[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Dialogs/JoinServerDialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/ScalingSize.gd" type="Script" id=2]

[node name="JoinServerDialog" type="ConfirmationDialog"]
margin_right = 391.0
margin_bottom = 106.0
popup_exclusive = true
window_title = "Join Server Options"
dialog_hide_on_ok = false
script = ExtResource( 1 )

[node name="Ordering" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/separation = 10
alignment = 1

[node name="WarningText" type="RichTextLabel" parent="Ordering"]
margin_right = 375.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
script = ExtResource( 2 )

[node name="Controls" type="GridContainer" parent="Ordering"]
editor/display_folded = true
margin_top = 10.0
margin_right = 375.0
margin_bottom = 62.0
columns = 4

[node name="PlayerNameLabel" type="Label" parent="Ordering/Controls"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Player Name:"
align = 2

[node name="PlayerNameValue" type="LineEdit" parent="Ordering/Controls"]
margin_left = 89.0
margin_right = 289.0
margin_bottom = 24.0
max_length = 20
placeholder_text = "Enter a name."

[node name="Blank" type="Control" parent="Ordering/Controls"]
margin_left = 293.0
margin_right = 297.0
margin_bottom = 24.0

[node name="Blank2" type="Control" parent="Ordering/Controls"]
margin_left = 301.0
margin_right = 375.0
margin_bottom = 24.0

[node name="ServerIPLabel" type="Label" parent="Ordering/Controls"]
margin_top = 33.0
margin_right = 85.0
margin_bottom = 47.0
text = "Server IP:"
align = 2

[node name="IPValue" type="LineEdit" parent="Ordering/Controls"]
margin_left = 89.0
margin_top = 28.0
margin_right = 289.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 0 )

[node name="Separator" type="Label" parent="Ordering/Controls"]
margin_left = 293.0
margin_top = 33.0
margin_right = 297.0
margin_bottom = 47.0
text = ":"

[node name="PortValue" type="SpinBox" parent="Ordering/Controls"]
margin_left = 301.0
margin_top = 28.0
margin_right = 375.0
margin_bottom = 52.0
min_value = 1024.0
max_value = 49151.0
value = 27005.0
rounded = true

[connection signal="about_to_show" from="." to="." method="_on_JoinServerDialog_about_to_show"]
[connection signal="text_changed" from="Ordering/Controls/IPValue" to="." method="_on_IPValue_text_changed"]
